--- a/parkus-client/app/src/main/res/values/strings.xml
+++ b/parkus-client/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">parkus-client</string>
+    <string name="title_activity_main_map">Map</string>
 </resources>
