--- a/parkus-client/app/src/main/res/values/strings.xml
+++ b/parkus-client/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="encountered_problem">Napotkano problem</string>
     <string name="try_again">Spróbuj ponownie</string>
     <string name="cancel">Anuluj</string>
+    <string name="parking_place">Wolne miejsce</string>
 </resources>
