--- a/parkus-client/app/src/main/res/values/strings.xml
+++ b/parkus-client/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="try_again">Spróbuj ponownie</string>
     <string name="cancel">Anuluj</string>
     <string name="parking_place">Wolne miejsce</string>
+    <string name="add">Dodaj</string>
 </resources>
