--- a/parkus-client/app/src/main/res/values/strings.xml
+++ b/parkus-client/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="password">Hasło</string>
     <string name="register">Załóż konto</string>
     <string name="add">Dodaj</string>
+    <string name="welcome">Witaj w aplikacji parkUŚ!</string>
 </resources>
